client/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pod
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ivantom/tp-blog-client
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort : 3000
      restartPolicy: Always
