client/k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-nodeport
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
